# glframework

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
cmake/: CopyFile.cmake
example/noel/res/objs/: iscv2.mtl
example/noel/res/shaders/: basic3d.fs.glsl  basic3d.vs.glsl  button2d.fs.glsl  cubmap.vs.glsl  lightnight.fs.glsl  white3d.fs.glsl
example/noel/res/shaders/geometry/: cubmap.fs.glsl  default.fs.glsl  default.vs.glsl
example/noel/res/shaders/postprocessing/: gamma.cs.glsl
example/noel/res/shaders/shading/: ambient.fs.glsl  default.fs.glsl  default.vs.glsl  diffuse.fs.glsl  normal.fs.glsl  shadow.fs.glsl  specular.fs.glsl
example/noel/res/shaders/shadow/: directionalSM.fs.glsl  directionalSM.gs.glsl  directionalSM.vs.glsl
example/noel/src/: OpenglNoel.cpp  OpenglNoel.h  main.cpp
example/solarsystem/src/: SolarSystem.cpp  SolarSystem.h  main.cpp
example/solarsystem/src/astronomy/: Description.h  Parser.cpp  Path.h  Planet.cpp  Planet.h  Star.cpp  Star.h  System.cpp  System.h
example/tangram/res/shaders/: basic2d.fs.glsl  basic2d.vs.glsl  basic3d.fs.glsl  color3d.fs.glsl  cubmap.fs.glsl  light.fs.glsl  selection3d.fs.glsl
example/tangram/res/shaders/geometry/: light.fs.glsl
example/tangram/src/: Tangram.cpp  Tangram.h  main.cpp
res/: solarsystem.txt  system.csv
res/shaders/: basic2d.fs.glsl  basic2d.vs.glsl  basic3d.fs.glsl  basic3d.vs.glsl  color3d.fs.glsl  cubmap.fs.glsl  light.fs.glsl  ring.fs.glsl  selection2d.fs.glsl  selection3d.fs.glsl  sun.fs.glsl
res/shaders/shading/: default.vs.glsl
src/: OpenglNoel.cpp  OpenglNoel.h  SolarSystem.cpp  SolarSystem.h  Tangram.cpp  Tangram.h  main.cpp
src/astronomy/: Astre  Astre.cpp  Astre.h  Description  Description.h  Parser.cpp  Parser.h  Path.cpp  Path.h  Planet.cpp  Planet.h  Star  Star.cpp  Star.h  System.cpp  System.h
src/glgeometry/: Circle.cpp  Circle.h  Circle3D  Circle3D.cpp  Circle3D.h  Cube.cpp  Cube.h  Parallelogram  Parallelogram.cpp  Parallelogram.h  ParametricDrawable.cpp  ParametricDrawable.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Variable.cpp  Variable.h
src/glscene/: Scene.cpp  Scene.h  SceneASSIMP.cpp  SceneASSIMP.h  SceneGLTF.cpp  SceneGLTF.h
src/gltools/: Buffer.cpp  Buffer.h  Camera  Camera.cpp  Camera.h  Drawable  Drawable.cpp  Drawable.h  Framebuffer.cpp  Framebuffer.h  FreeflyCamera  FreeflyCamera.cpp  FreeflyCamera.h  FreeflyModelView.cpp  FreeflyModelView.h  FreeflyView  FreeflyView.cpp  FreeflyView.h  LightView  LightView.cpp  LightView.h  Model.cpp  Model.h  ModelView.cpp  ModelView.h  ParametricDrawable  ParametricDrawable.cpp  ParametricDrawable.h  Program.cpp  Program.h  Projection.cpp  Projection.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  (+14 more)
src/maths/: Array.h  Variable.cpp  Variable.h
src/utility/: CSVReader.cpp  CSVReader.h  TimeManager.cpp  TimeManager.h
utils/: install-cmake.sh
